# CUDATesting

./: CMakeLists.txt  PreLoad.cmake
lib/: SAMUDA.h
src/: benchmark.cu  benchmark.h  main.cu
src/kernels/: array.cu  histograms.cu  kernels.h
